# medKeep_landing_page

./: .gitignore  .npmrc  Makefile  README.md  index.html
apps/web/: eslint.config.mjs  tailwind.config.mjs  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/landing/: BenefitsSection.tsx  FaqSection.tsx  HeroMockup.tsx  HeroSection.tsx  HowItWorksSection.tsx  ProblemSection.tsx  SiteFooter.tsx  SocialProofStrip.tsx  SolutionSection.tsx
client/: README.md  package.json  pnpm-lock.yaml
client/apps/web/: package.json
client/apps/web/components/landing/: CtaSection.tsx  PricingSection.tsx  Reveal.tsx  SiteHeader.tsx  SolutionSection.tsx  index.ts
server/: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
server/apps/api/: README.md  package.json  tsconfig.build.json
server/apps/api-public/: package.json  tsconfig.json
server/apps/api-public/src/: app.controller.ts  app.module.ts  app.service.ts  main.ts
server/apps/api/src/: app.controller.ts  app.module.ts  main.ts
server/apps/api/src/users/: users.controller.ts  users.module.ts  users.service.ts
server/apps/bot/: README.md  pyproject.toml  requirements.txt
server/apps/bot/app/: main.py
server/infra/: docker-compose.yml
server/libs/common/: package.json  tsconfig.json
server/libs/common/src/: index.ts
server/libs/common/src/activity-log/: activity-log-queue.processor.ts  activity-log.module.ts  activity-log.types.ts  index.ts
server/libs/common/src/app/: app.module.ts
server/libs/common/src/bull-queue/: index.ts  (+1 more)
(+231 files in other folders)
