[project]
name = "medkeep-bot"
version = "0.1.0"
description = "Bot / worker FastAPI (fila ⇄ Nest)"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "redis>=5.2.0",
  "python-dotenv>=1.0.1",
  "pydantic-settings>=2.7.0",
]

[tool.uv]
# Opcional: se usares uv para lockfile (`uv sync`)
